infrastructure/dev/istio-ingress-gateway-internal/csi-secret-store-gateway.yaml
apiVersion: v1
kind: Pod
metadata:
  name: csi-secret-store-gateway
  namespace: aks-istio-ingress
spec:
  containers:
    - name: busybox
      image: mcr.microsoft.com/oss/busybox/busybox:1.33.1
      command:
        - "/bin/sleep"
        - "10"
      volumeMounts:
      - name: istio-ingress-tls-volume
        mountPath: "/mnt/secrets-store"
        readOnly: true
  volumes:
    - name: istio-ingress-tls-volume
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "azure-kv-secrets"
