infrastructure/dev/istio-ingress-gateway-internal/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-ingress-gateway-internal
  namespace: aks-istio-ingress
  labels:
    app: istio-ingress-gateway
spec:
  selector:
    istio: aks-istio-ingressgateway-internal
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - demo-services.internal.cloudcompany.pe
